@@ -127,6 +127,9 @@
 
       \item The included \command{libtool} script (generated by
       \command{configure}) has been updated to version 2.4.6 (from 2.2.6a).
+      
+      \item \code{libcurl} version 7.28.0 or later is required for
+      installation (except on Windows).
     }
   }
 
